# licence_plate_recognition

./: .gitignore  CMakeLists.txt  DrawBB.py  Kconfig  Makefile  README.md  call_at.py  coco_emul.c  common.mk  emul.mk  gaptest.yml  lprnet.c  lprnet.h  lprnet.mk  main.c  resized_cropped_plate.ppm  sdk.config  ssd.mk  ssdlite_ocr.c  ssdlite_v2_quant_ocr_nntool.c  ssdlite_v2_quant_ocr_nntool.h  ssdlite_v2_quant_ocr_nntool_emul  test_ssd.c  testset.cfg
SSD/: BB_utils.c  BB_utils.h  SSDBasicKernels.c  SSDBasicKernels.h  SSDModel.c
SSDParamsGenerator/: genSSDparams  layers.h  main.c
common/: model_decl.mk  model_rules.mk
images/: 2m_3.ppm  2m_3_gray.ppm
model/: check_lprnet.ipynb  get_char_from_nntool.py  lprnet.tflite  lprnet_old.tflite  nntool_script  nntool_script_emul8  nntool_script_emul_lprnet  nntool_script_emul_ssdlite  nntool_script_lprnet  nntool_script_lprnet_ne16  nntool_script_ssdlite  nntool_script_ssdlite_ne16  ssdlite_v2_quant_ocr.tflite  ssdlite_v2_quant_ocr_nntool.tflite  ssdlite_v2_quant_ocr_nopostprocess.tflite  tensors_out.json  tflite_inference.ipynb
model/.ipynb_checkpoints/: tflite_inference-checkpoint.py
model/lp_recognition/LPRNet_china_no_tile_quantized/: 0m_7_resized.ppm  graph.pbtxt
model/lp_recognition/LPRNet_czech_no_tile_REDUCED_SIZE/: graph.pb  graph.pbtxt  graph.tflite
model/lp_recognition/LPRNet_synth_no_tile_64_quantized_sym/: graph.pbtxt
utils/: DrawBB.py  call_at.py  licence_plate_tflite.py  lprnet_nntool_inference.py  lprnet_tflite_inference.py  ssd_tflite_inference.py
